Basic Camera Movement & Photo Taking - Added a Player Character with the ability to move the camera around with the mouse. - The Player can press left click to snap a photo, which displays it as a texture.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -231,3 +231,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/BlackCatJam.SnapCamera.SnapPhoto",NewName="/Script/BlackCatJam.SnapCamera.TakePhoto")
