Further Camera Zoom - Added new levels of zoom to the Camera, which can be activated with the mouse wheel. - Refactored a bunch of Camera code.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -234,3 +234,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/BlackCatJam.SnapCamera.SnapPhoto",NewName="/Script/BlackCatJam.SnapCamera.TakePhoto")
++PropertyRedirects=(OldName="/Script/BlackCatJam.SnapCamera.Focused",NewName="/Script/BlackCatJam.SnapCamera.ZoomedIn")
