Design- Updated the Spline on the map and removed Max's RedCoob

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Dynamic/Main_MenuUI/UI_StartMenu.UI_StartMenu
+GlobalDefaultGameMode=/Game/Dynamic/Blueprints/BP_MainGameMode.BP_MainGameMode_C
+EditorStartupMap=/Game/Dynamic/Cat_Island.Cat_Island
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -234,3 +236,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/BlackCatJam.SnapCamera.SnapPhoto",NewName="/Script/BlackCatJam.SnapCamera.TakePhoto")
+
