Fixed Camera Bugs and Track Adjustments - Fixed a Bug with the Camera's properties not being set - Adjusted the Track logic. You can now loop around a track, and the Player will follow the Track on the Z axis. - Added a basic photo taken SFX. Can easily replace if needed.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -235,3 +235,4 @@ ManualIPAddress=
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/BlackCatJam.SnapCamera.SnapPhoto",NewName="/Script/BlackCatJam.SnapCamera.TakePhoto")
 +PropertyRedirects=(OldName="/Script/BlackCatJam.SnapCamera.Focused",NewName="/Script/BlackCatJam.SnapCamera.ZoomedIn")
++PropertyRedirects=(OldName="/Script/BlackCatJam.SnapCamera.OnCameraZoomEvent",NewName="/Script/BlackCatJam.SnapCamera.OnCameraZoom")
