HUD & Improved Camera - Added a little HUD element for the Camera - Made some further adjustments to the Camera.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -236,4 +236,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/BlackCatJam.SnapCamera.SnapPhoto",NewName="/Script/BlackCatJam.SnapCamera.TakePhoto")
++ClassRedirects=(OldName="/Script/BlackCatJam.PlayerHUD",NewName="/Script/BlackCatJam.PlayerHUDWidget")
++PropertyRedirects=(OldName="/Script/BlackCatJam.SnapCamera.FocusViewport",NewName="/Script/BlackCatJam.SnapCamera.CameraViewport")
++PropertyRedirects=(OldName="/Script/BlackCatJam.PlayerCharacter.FocusCameraAction",NewName="/Script/BlackCatJam.PlayerCharacter.FocusCameraInAction")
 
