Submitting the end game changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -240,3 +240,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/BlackCatJam.SnapCamera.FocusViewport",NewName="/Script/BlackCatJam.SnapCamera.CameraViewport")
 +PropertyRedirects=(OldName="/Script/BlackCatJam.PlayerCharacter.FocusCameraAction",NewName="/Script/BlackCatJam.PlayerCharacter.FocusCameraInAction")
 
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
+
